Changes to pages and comments

--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -6,7 +6,7 @@
 
     <title>Bun Bun Bake Shop</title>
 
-    <!-- Font -->
+    <!-- Open Sans Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,800;1,400&display=swap"
       rel="stylesheet"
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <!-- Header -->
     <header>
       <a href="./index.html">
         <img src="assets/logo.png" alt="Bun bun shop logo" class="shop" />
@@ -23,12 +24,14 @@
       <a href="./index.html"><h1 class="shop">Bun Bun Bake Shop</h1></a>
       <img src="assets/cart.png" alt="Cart" id="cart" />
     </header>
+    <!-- Navigation Bar -->
     <nav>
       <div class="nav-page"><a href="./about.html">about</a></div>
       <div class="nav-page"><a href="./products.html">shop</a></div>
       <div class="nav-page">contact</div>
       <div class="nav-page">faq</div>
     </nav>
+    <!-- Hero Banner-->
     <div class="hero">
       <img src="./assets/hero.jpg" class="hero-image" />
       <h2 class="shop-location">Located in Pittsburgh</h2>
@@ -38,7 +41,7 @@
         <div class="view-goods">View all of our baked goods</div>
       </a>
     </div>
-
+    <!-- Popular Products -->
     <div id="popular-products">
       <h2 class="title">Most Popular Products</h2>
     </div>
@@ -46,19 +49,23 @@
       <div class="roll">
         <img src="assets/original.jpg" />
         <h3>Original: $3</h3>
+        <div class="button">Start Order</div>
         <a href="./original.html"><div class="button">Details</div></a>
       </div>
       <div class="roll">
         <img src="assets/blackberry.jpg" />
         <h3>Blackberry: $4</h3>
+        <div class="button">Start Order</div>
         <div class="button">Details</div>
       </div>
       <div class="roll">
         <img src="assets/pumpkin.jpg" />
         <h3>Pumpkin Spice: $4</h3>
+        <div class="button">Start Order</div>
         <div class="button">Details</div>
       </div>
     </div>
+    <!-- Footer -->
     <footer>
       <a href="./about.html">
         <div class="footer-page">Learn more about the shop here.</div>
