--- a/homework_5/about.html
+++ b/homework_5/about.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Bun Bun Bake Shop</title>
+    <title>About - Bun Bun Bake Shop</title>
 
-    <!-- Font -->
+    <!-- Open Sans Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,800;1,400&display=swap"
       rel="stylesheet"
@@ -16,20 +16,24 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <!-- Header -->
     <header>
-      <a href="./index.html"
-        ><img src="assets/logo.png" alt="Bun bun shop logo" class="shop"
-      /></a>
+      <a href="./index.html">
+        <img src="assets/logo.png" alt="Bun bun shop logo" class="shop" />
+      </a>
       <a href="./index.html"><h1 class="shop">Bun Bun Bake Shop</h1></a>
       <img src="assets/cart.png" alt="Cart" id="cart" />
     </header>
+    <!-- Navigation Bar -->
     <nav>
       <div class="nav-page"><a href="./about.html">about</a></div>
       <div class="nav-page"><a href="./products.html">shop</a></div>
       <div class="nav-page">contact</div>
       <div class="nav-page">faq</div>
     </nav>
+    <!-- Title -->
     <h2 class="title">About Us</h2>
+    <!-- About Us Information-->
     <div class="info">
       <img src="assets/baker.jpg" />
       <div class="about-info">
@@ -56,6 +60,7 @@
         </p>
       </div>
     </div>
+    <!-- Footer -->
     <footer>
       <a href="./about.html">
         <div class="footer-page">Learn more about the shop here.</div>
