--- a/homework_5/products.html
+++ b/homework_5/products.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Bun Bun Bake Shop</title>
+    <title>Online Shop - Bun Bun Bake Shop</title>
 
-    <!-- Font -->
+    <!-- Open Sans Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,800;1,400&display=swap"
       rel="stylesheet"
@@ -16,55 +16,66 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <!-- Header -->
     <header>
-      <a href="./index.html"
-        ><img src="assets/logo.png" alt="Bun bun shop logo" class="shop"
-      /></a>
+      <a href="./index.html">
+        <img src="assets/logo.png" alt="Bun bun shop logo" class="shop" />
+      </a>
       <a href="./index.html"><h1 class="shop">Bun Bun Bake Shop</h1></a>
       <img src="assets/cart.png" alt="Cart" id="cart" />
     </header>
+    <!-- Navigation Bar -->
     <nav>
       <div class="nav-page"><a href="./about.html">about</a></div>
       <div class="nav-page"><a href="./products.html">shop</a></div>
       <div class="nav-page">contact</div>
       <div class="nav-page">faq</div>
     </nav>
+    <!-- Title and Filter Option -->
     <div>
       <h2 class="title">Online Shop</h2>
       <div class="filter">Filter By</div>
     </div>
+    <!-- Products in grid view -->
     <div class="grid">
       <div class="roll">
         <img src="assets/original.jpg" />
         <h3>Original: $3</h3>
+        <div class="button">Start Order</div>
         <a href="./original.html"><div class="button">Details</div></a>
       </div>
       <div class="roll">
         <img src="assets/original.jpg" />
         <h3>Original (GF): $4</h3>
+        <div class="button">Start Order</div>
         <a href="./original_gf.html"><div class="button">Details</div></a>
       </div>
       <div class="roll">
         <img src="assets/blackberry.jpg" />
         <h3>Blackberry: $4</h3>
+        <div class="button">Start Order</div>
         <div class="button">Details</div>
       </div>
       <div class="roll">
         <img src="assets/pumpkin.jpg" />
         <h3>Pumpkin Spice: $4</h3>
+        <div class="button">Start Order</div>
         <div class="button">Details</div>
       </div>
       <div class="roll">
         <img src="assets/walnut.jpg" />
         <h3>Walnut: $4</h3>
+        <div class="button">Start Order</div>
         <div class="button">Details</div>
       </div>
       <div class="roll">
         <img src="assets/caramel.jpg" />
         <h3>Caramel Pecan: $4</h3>
+        <div class="button">Start Order</div>
         <div class="button">Details</div>
       </div>
     </div>
+    <!-- Footer -->
     <footer>
       <a href="./about.html">
         <div class="footer-page">Learn more about the shop here.</div>
